# btester

./: .gitignore  .gitmodules  CMakeLists.txt  getYahooHD.sh  main.cpp  readme.md  symbols.txt  syms.txt  vcpkg.json
lib/: CMakeLists.txt
lib/include/: Analyzer.hpp  CrossCorr.hpp  CrossCorrAnalyzer.hpp  CurrencyConversions.hpp  MultiFileTickManager.hpp  MultiFileTickProcessor.hpp  PaperTradeManager.hpp  PolygonFileTickManager.hpp  RandomBuySellStrategy.hpp  SmaStrategy.hpp  Tick.hpp  TickManager.hpp  TickProcessor.hpp  Trade.hpp  TradeManager.hpp  TradingSystem.hpp  VirtualBank.hpp  VwmaStrategy.hpp  YFMultiFileTickManager.hpp  YahooFinanceFileTickManager.hpp  constants.hpp  helpers.hpp  staticmsgs.hpp
lib/src/: Analyzer.cpp  CrossCorr.cpp  CrossCorrAnalyzer.cpp  CurrencyConversions.cpp  PaperTradeManager.cpp  PolygonFileTickManager.cpp  RandomBuySellStrategy.cpp  SmaStrategy.cpp  Tick.cpp  Trade.cpp  TradeManager.cpp  YFMultiFileTickManager.cpp  YahooFinanceFileTickManager.cpp  constants.cpp  staticmsgs.cpp
tests/: CMakeLists.txt  Comps_test.cpp
